# parametarized function, named parameter, defaultparameter, variable argument

--- a/function.ipynb
+++ b/function.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,25 +146,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'randint' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[25], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(randint(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m6\u001b[39m))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'randint' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object `choice` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# to know about\n",
+    "choice?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['😻', '😡', '👌', '🤗', '👋', '😂', '😊', '👍']\n",
+      "Your emoji is:\n",
+      "['😻', '😡', '👌', '🤗', '👋', '😂', '😊', '👍']\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = ['😻','😡','👌','🤗','👋','😂','😊','👍']\n",
+    "print(data)\n",
+    "print(\"Your emoji is:\")\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
      ]
     }
    ],
@@ -174,12 +203,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "👍 👌 😡 😻 👋\n",
+      "👍 👋 👍 😡 👌 😂 😻 😡 😻 👍\n"
+     ]
+    }
+   ],
    "source": [
     "from random import sample, choices\n",
-    "out = sample(data,10)\n",
+    "out = sample(data, 5)\n",
     "print(*out) # * here is a trick to unpack the list\n",
     "out2 = choices(data, k=10)\n",
     "print(*out2)"
@@ -187,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,25 +234,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'datetime' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[23], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# date\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m date \u001b[38;5;241m=\u001b[39m datetime\u001b[38;5;241m.\u001b[39mdate(datetime\u001b[38;5;241m.\u001b[39mnow())\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(date)\n\u001b[0;32m      4\u001b[0m time \u001b[38;5;241m=\u001b[39m datetime\u001b[38;5;241m.\u001b[39mtime(datetime\u001b[38;5;241m.\u001b[39mnow())\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'datetime' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-07-30 15:38:46.410301\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(datetime.now())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-07-30\n",
+      "2024-07-30\n",
+      "2024-07-30 15:39:11.676562\n",
+      "30/07/2024\n"
      ]
     }
    ],
@@ -232,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,9 +288,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current location\n",
+      "c:\\Users\\ARYAN\\OneDrive\\문서\\PYTHON DATA SCIENCE\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"current location\")\n",
     "print(os.getcwd())"
@@ -251,9 +307,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list all files\n",
+      ":.git\n",
+      ":basic.ipynb\n",
+      ":conditions.ipynb\n",
+      ":dictionary.ipynb\n",
+      ":function.ipynb\n",
+      ":io.ipynb\n",
+      ":list.ipynb\n",
+      ":loops.ipynb\n",
+      ":numpy.ipynb\n",
+      ":pattern1.py\n",
+      ":pattern2.py\n",
+      ":sets.ipynb\n",
+      ":string.ipynb\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"list all files\")\n",
     "content = os.listdir()\n",
@@ -263,9 +340,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ":AMD\n",
+      ":Common Files\n",
+      ":desktop.ini\n",
+      ":Git\n",
+      ":Google\n",
+      ":HP\n",
+      ":HPCommRecovery\n",
+      ":HPPrintScanDoctor\n",
+      ":Internet Explorer\n",
+      ":McAfee\n",
+      ":Microsoft\n",
+      ":Microsoft Office\n",
+      ":Microsoft Office 15\n",
+      ":Microsoft OneDrive\n",
+      ":Microsoft Update Health Tools\n",
+      ":ModifiableWindowsApps\n",
+      ":MySQL\n",
+      ":Online Services\n",
+      ":Uninstall Information\n",
+      ":Windows Defender\n",
+      ":Windows Mail\n",
+      ":Windows Media Player\n",
+      ":Windows NT\n",
+      ":Windows Photo Viewer\n",
+      ":Windows Sidebar\n",
+      ":WindowsApps\n",
+      ":WindowsPowerShell\n"
+     ]
+    }
+   ],
    "source": [
     "content= os.listdir(\"c:/program files\")\n",
     "for item in content:\n",
@@ -274,9 +385,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📃AMD\n",
+      "📃Common Files\n",
+      "📃desktop.ini\n",
+      "📃Git\n",
+      "📃Google\n",
+      "📃HP\n",
+      "📃HPCommRecovery\n",
+      "📃HPPrintScanDoctor\n",
+      "📃Internet Explorer\n",
+      "📃McAfee\n",
+      "📃Microsoft\n",
+      "📃Microsoft Office\n",
+      "📃Microsoft Office 15\n",
+      "📃Microsoft OneDrive\n",
+      "📃Microsoft Update Health Tools\n",
+      "📃ModifiableWindowsApps\n",
+      "📃MySQL\n",
+      "📃Online Services\n",
+      "📃Uninstall Information\n",
+      "📃Windows Defender\n",
+      "📃Windows Mail\n",
+      "📃Windows Media Player\n",
+      "📃Windows NT\n",
+      "📃Windows Photo Viewer\n",
+      "📃Windows Sidebar\n",
+      "📃WindowsApps\n",
+      "📃WindowsPowerShell\n"
+     ]
+    }
+   ],
    "source": [
     "content = os.listdir(\"c:/program files\")\n",
     "for item in content:\n",
@@ -290,11 +435,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.makedirs"
+    "os.makedirs(\"a/b/c\", exist_ok = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.makedirs(\"c:/important/work\", exist_ok = True)"
    ]
   },
   {
@@ -313,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,9 +480,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "105\n",
+      "126\n",
+      "190\n"
+     ]
+    }
+   ],
    "source": [
     "adder()\n",
     "adder()\n",
@@ -337,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,18 +512,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "adder(10,12)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3698"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x =1299\n",
     "y = 2399\n",
@@ -368,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,9 +566,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(30000.0, 230000.0)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p = 200000\n",
     "r = 1.5\n",
@@ -392,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,9 +600,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1256.0\n",
+      "2461.76\n"
+     ]
+    }
+   ],
    "source": [
     "r = 10\n",
     "area_sphere(r)\n",
@@ -415,9 +621,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n",
+      "5538.96\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "ans = adder(15, 6)\n",
     "print(ans)\n",
@@ -427,9 +643,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "total words:9\n"
+     ]
+    }
+   ],
    "source": [
     "# waf to count the number of words in a sentence\n",
     "def word_count(sentence):\n",
@@ -446,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,9 +683,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "300000"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = 20\n",
     "b = 10\n",
@@ -471,9 +707,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n",
+      "120\n",
+      "60\n",
+      "40\n"
+     ]
+    }
+   ],
    "source": [
     "print(multiplier(1,2,3,4))\n",
     "print(multiplier(a=2,b=3,c=4,d=5)) # keyword argument\n",
@@ -483,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,9 +742,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n",
+      "6\n",
+      "24\n"
+     ]
+    }
+   ],
    "source": [
     "print(multiplier_v2(1,2,3,4))\n",
     "print(multiplier_v2(1,2,3)) #d is optional(default value = 1)\n",
@@ -506,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,9 +774,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "10\n",
+      "10\n",
+      "200\n",
+      "200\n",
+      "240000\n",
+      "240000\n"
+     ]
+    }
+   ],
    "source": [
     "print(multiplier_v3())\n",
     "print(multiplier_v3(10))\n",
@@ -532,18 +803,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hell', ' w', 'rd']"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"hello word\".split(sep='o')# default parameter example in predefine function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1\n",
+      "1 2 3 4\n",
+      "1|2|3|4|5|6|7|8|9|0|1\n"
+     ]
+    }
+   ],
    "source": [
     "# variable length argument\n",
     "print()\n",
@@ -554,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,9 +862,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n",
+      "44.0\n",
+      "3.0\n",
+      "12\n"
+     ]
+    }
+   ],
    "source": [
     "print(stats(1,2,3,4,5,6,7,8,9))\n",
     "print(stats(22,33,44,55,66))\n",
@@ -591,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,9 +908,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "details of the person\n",
+      "name      |ekta\n",
+      "details of the person\n",
+      "name      |khushi\n",
+      "age       |18\n",
+      "city      |mumbai\n",
+      "country   |india\n",
+      "gender    |female\n",
+      "details of the person\n",
+      "name      |shivi\n",
+      "age       |20\n",
+      "city      |kanpur\n",
+      "job       |HR\n"
+     ]
+    }
+   ],
    "source": [
     "person(name = 'ekta')\n",
     "person(name = 'khushi', age=18, city='mumbai', country='india', gender='female')\n",
@@ -631,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,9 +964,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101\n",
+      "5\n",
+      "10001\n"
+     ]
+    }
+   ],
    "source": [
     "print(f(10))\n",
     "print(f(2))\n",
@@ -651,9 +985,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n",
+      "26\n"
+     ]
+    }
+   ],
    "source": [
     "g = lambda x, y: x**2 + y**2 +1\n",
     "print(g(2,3))\n",
@@ -662,9 +1005,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 5, 10, 17, 26, 37, 50, 65, 82, 101]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = [1,2,3,4,5,6,7,8,9,10]\n",
     "f = lambda x: x**2 +1\n",
@@ -673,18 +1027,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 5, 10, 17, 26, 37, 50, 65, 82, 101)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tuple(map(f, data))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[102, 405, 910, 1617, 2526, 3637, 4950, 6465, 8182, 222]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data1 = [1,2,3,4,5,6,7,8,9,10]\n",
     "data2 = [10,20,30,40,50,60,70,80,90,11]\n",
@@ -694,19 +1070,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(102, 405, 910, 1617, 2526, 3637, 4950, 6465, 8182, 222)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tuple(map(g,data1, data2))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
