--- a/list.ipynb
+++ b/list.ipynb
@@ -54,6 +54,7 @@
     }
    ],
    "source": [
+    "#positive or negative indexing\n",
     "print(apps[5])\n",
     "print(apps[6])\n",
     "print(apps[-3])\n",
@@ -137,6 +138,7 @@
     }
    ],
    "source": [
+    "#add item\n",
     "apps.append('tinder')\n",
     "print(apps)"
    ]
@@ -155,6 +157,7 @@
     }
    ],
    "source": [
+    "# insert a position to a specifice place\n",
     "apps.insert(2,'tinder')\n",
     "print(apps)"
    ]
@@ -173,6 +176,7 @@
     }
    ],
    "source": [
+    "#tp delete a item by index position\n",
     "apps.pop(6)\n",
     "print(apps)"
    ]
@@ -191,6 +195,7 @@
     }
    ],
    "source": [
+    "#delete by name\n",
     "apps.remove('drive')\n",
     "print(apps)"
    ]
@@ -236,7 +241,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#combine to list\n",
+    "apps3 = ['gpay','camera','maps']\n",
+    "apps2.extend(apps3)\n",
+    "print(apps2)"
+   ]
   },
   {
    "cell_type": "code",
@@ -252,6 +262,7 @@
     }
    ],
    "source": [
+    "#to print the square\n",
     "a = [2,4,6,8,10]\n",
     "lst= []\n",
     "for i in a:\n",
@@ -274,7 +285,7 @@
    ],
    "source": [
     "num = [2,4,6,8,10]\n",
-    "square = [i**2 for i in num]\n",
+    "square = [i**2 for i in num] #list comprehension\n",
     "print(square)"
    ]
   },
@@ -311,6 +322,7 @@
     }
    ],
    "source": [
+    "# to print even numbers from the list using list comprehension\n",
     "x = [1,4,3,5,8,50,10,34,23,54,12]\n",
     "even_nums = [num for num in x if num%2==0]\n",
     "print(even_nums)"
@@ -318,25 +330,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "not all arguments converted during string formatting",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m x \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmango\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbanana\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124morange\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mapple\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m----> 2\u001b[0m num \u001b[38;5;241m=\u001b[39m [num \u001b[38;5;28;01mfor\u001b[39;00m num \u001b[38;5;129;01min\u001b[39;00m x \u001b[38;5;28;01mif\u001b[39;00m num\u001b[38;5;241m%\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m] \n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(x)\n",
-      "\u001b[1;31mTypeError\u001b[0m: not all arguments converted during string formatting"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['banana', 'orange', 'avoado', 'grapes', 'cherry']\n"
      ]
     }
    ],
    "source": [
-    "x = ['mango','banana','orange','apple']\n",
-    "num = [num for num in x if num%2==0] \n",
-    "print(x)"
+    "#fruits whose length = 6\n",
+    "fruits = ['mango','banana','orange','apple','avoado','grapes','cherry']\n",
+    "len_fruits = [i for i in fruits if len(i)==6] \n",
+    "print(len_fruits)"
    ]
   },
   {
@@ -357,13 +366,6 @@
     "lst = [i.upper() for i in words]\n",
     "print(lst)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
