--- a/loops.ipynb
+++ b/loops.ipynb
@@ -2,19 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "mango\n",
+      "banana\n",
+      "kiwi\n",
+      "grapes\n"
+     ]
+    }
+   ],
    "source": [
-    "#for loops \n",
+    "#for loops (list)\n",
     "fruits = ['apple','mango','banana','kiwi','grapes']\n",
     "for x in fruits:\n",
-    "    print(x)\n"
+    "    print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -26,6 +38,7 @@
     }
    ],
    "source": [
+    "#for loop (string)\n",
     "a = \"Hello World\"\n",
     "for x in a:\n",
     "    print(x, end=\"\") # to print in a horizontal way we use end"
@@ -73,6 +86,7 @@
     }
    ],
    "source": [
+    "#to print numbers using for loop\n",
     "for i in range(1,11):\n",
     "    print(i)"
    ]
@@ -123,6 +137,7 @@
     }
    ],
    "source": [
+    "# name = 'aliya chauhan\n",
     "for i in range(1,6):\n",
     "    print(\"aliya chauhan\")"
    ]
@@ -147,6 +162,7 @@
     }
    ],
    "source": [
+    "#to print numbers using gap (start,end,gap)\n",
     "for i in range(1,21,3):\n",
     "    print(i)"
    ]
@@ -179,6 +195,7 @@
     }
    ],
    "source": [
+    "#to print even numbers from o to 30\n",
     "for i in range(0,30,2):\n",
     "    print(i)"
    ]
@@ -211,6 +228,7 @@
     }
    ],
    "source": [
+    "#print odd number\n",
     "for i in range(31):\n",
     "    if i%2!=0:\n",
     "        print(i)"
@@ -275,6 +293,7 @@
     }
    ],
    "source": [
+    "#to print name using while loop\n",
     "i = 0 \n",
     "while i<5:\n",
     "    print(\"I can do it, I am the best\")\n",
@@ -283,65 +302,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(a) * (i) = 15\n",
-      "(a) * (i) = 30\n",
-      "(a) * (i) = 45\n",
-      "(a) * (i) = 60\n",
-      "(a) * (i) = 75\n",
-      "(a) * (i) = 90\n",
-      "(a) * (i) = 105\n",
-      "(a) * (i) = 120\n",
-      "(a) * (i) = 135\n",
-      "(a) * (i) = 150\n"
+      "15 * 1 = 15\n",
+      "15 * 2 = 30\n",
+      "15 * 3 = 45\n",
+      "15 * 4 = 60\n",
+      "15 * 5 = 75\n",
+      "15 * 6 = 90\n",
+      "15 * 7 = 105\n",
+      "15 * 8 = 120\n",
+      "15 * 9 = 135\n",
+      "15 * 10 = 150\n"
      ]
     }
    ],
    "source": [
+    "#print table\n",
     "a = 15\n",
     "i = 1\n",
-    "while i<=10:\n",
-    "    print(f'(a) * (i) = {a*i}')\n",
-    "    i += 1\n"
+    "for i in range(1,11):\n",
+    "    print(f'{a} * {i} = {a*i}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5)*(i) + 25\n",
-      "(5)*(i) + 30\n",
-      "(5)*(i) + 35\n",
-      "(5)*(i) + 40\n",
-      "(5)*(i) + 45\n",
-      "(5)*(i) + 50\n",
-      "(5)*(i) + 55\n"
+      "15*5 + 25\n",
+      "15*6 + 30\n",
+      "15*7 + 35\n",
+      "15*8 + 40\n",
+      "15*9 + 45\n",
+      "15*10 + 50\n",
+      "15*11 + 55\n"
      ]
     }
    ],
    "source": [
     "a = 15\n",
     "for i in range(5,12):\n",
-    "    print(f'(5)*(i) + {5*i}')"
+    "    print(f'{a}*{i} + {5*i}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# break statement\n",
+    "a = [2,4,6,8,10,12,14,16,18,20]\n",
+    "for i in a:\n",
+    "    if i == 17:\n",
+    "        break\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# continue statement\n",
+    "a = [2,4,6,8,10,12,14,16,18,20]\n",
+    "for i in a:\n",
+    "    if i == 17:\n",
+    "        continue\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y"
+     ]
+    }
+   ],
+   "source": [
+    "# printfirst 3 character of your name\n",
+    "name = 'aliya'\n",
+    "for i in name:\n",
+    "    if i =='y':\n",
+    "        break\n",
+    "print(i, end=\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sum\n",
+    "a = [10,20,30,40]\n",
+    "total = 0\n",
+    "for i in a :\n",
+    "    total += i\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aliya\n",
+      "deepakshi\n",
+      "bhai\n",
+      "maapapa\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = ['aliya','deepakshi','bhai','maapapa']\n",
+    "for i in names:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.aliya\n",
+      "1.deepakshi\n",
+      "2.bhai\n",
+      "3.maapapa\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, v in enumerate(names):\n",
+    "    print(f'{i}.{v}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.pen\n",
+      "1.pencil\n",
+      "2.sharpner\n",
+      "3.scale\n"
+     ]
+    }
+   ],
+   "source": [
+    "items = ['pen','pencil','sharpner','scale']\n",
+    "for i, v in enumerate(items):\n",
+    "    if i == 5:\n",
+    "        break\n",
+    "    print(f'{i}.{v}')"
+   ]
   }
  ],
  "metadata": {
