--- a/sets.ipynb
+++ b/sets.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "create\n",
+    "\n",
+    "method\n",
+    "\n",
+    "set operation\n",
+    "- union\n",
+    "- intersection\n",
+    "- difference\n",
+    "- symmetric difference\n",
+    "- issubset -issuperset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
