--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -536,6 +536,7 @@
     }
    ],
    "source": [
+    "#np.percentile array\n",
     "arr = np.array([1,2,3,4,5,6,7,8,9])\n",
     "print(np.percentile(arr, 50))\n",
     "print(np.percentile(arr, 25))\n",
