--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
        "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "array([1, 3, 5, 7, 9])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,17 +267,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1,  2,  1],\n",
-       "       [ 4, 10,  2]], dtype=int32)"
+       "array([[1, 8, 4],\n",
+       "       [4, 5, 8]], dtype=int32)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,22 +288,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[10,  5,  3],\n",
-       "        [ 4,  1,  5],\n",
-       "        [ 4,  3, 10]],\n",
+       "array([[[ 9,  9,  1],\n",
+       "        [10,  2,  2],\n",
+       "        [ 3,  9,  7]],\n",
        "\n",
-       "       [[ 9,  9,  6],\n",
-       "        [ 4,  1,  3],\n",
-       "        [ 6,  7,  5]]], dtype=int32)"
+       "       [[ 3,  7,  9],\n",
+       "        [ 1,  8,  4],\n",
+       "        [ 7,  4,  9]]], dtype=int32)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,17 +314,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[15 11]\n",
-      " [ 4 16]]\n",
-      "[[ 7  4]\n",
-      " [15  1]]\n"
+      "[[ 6 17]\n",
+      " [10 14]]\n",
+      "[[15  7]\n",
+      " [13  9]]\n"
      ]
     }
    ],
@@ -337,19 +337,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[22 15]\n",
-      " [19 17]]\n",
-      "[[  8   7]\n",
-      " [-11  15]]\n",
-      "[[105  44]\n",
-      " [ 60  16]]\n"
+      "[[21 24]\n",
+      " [23 23]]\n",
+      "[[-9 10]\n",
+      " [-3  5]]\n",
+      "[[ 90 119]\n",
+      " [130 126]]\n"
      ]
     }
    ],
@@ -361,15 +361,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[270  71]\n",
-      " [268  32]]\n"
+      "[[311 195]\n",
+      " [332 196]]\n"
      ]
     }
    ],
@@ -381,17 +381,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[270,  71],\n",
-       "       [268,  32]], dtype=int32)"
+       "array([[311, 195],\n",
+       "       [332, 196]], dtype=int32)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,16 +403,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.int64(10560)"
+       "np.int64(14280)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,16 +424,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(6.75)"
+       "np.float64(11.0)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,14 +446,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 9.5 13.5]\n"
+      "[ 8.  15.5]\n"
      ]
     }
    ],
@@ -464,15 +464,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[15 11]\n",
-      " [ 4 16]]\n"
+      "[[ 6 17]\n",
+      " [10 14]]\n"
      ]
     }
    ],
@@ -482,14 +482,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[13. 10.]\n"
+      "[11.5 12. ]\n"
      ]
     }
    ],
@@ -500,16 +500,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "46\n",
-      "4.716990566028302\n",
-      "22.25\n"
+      "47\n",
+      "4.14578098794425\n",
+      "17.1875\n"
      ]
     }
    ],
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -545,17 +545,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[24 42 22 82]\n",
-      " [74 80 33 48]\n",
-      " [40 74 82 27]\n",
-      " [96 46 94 32]]\n"
+      "[[94 94 48 75]\n",
+      " [69 55 83 72]\n",
+      " [12 58 78 15]\n",
+      " [22 90 74 24]]\n"
      ]
     }
    ],
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -574,17 +574,17 @@
      "output_type": "stream",
      "text": [
       "2x8\n",
-      "[[24 42 22 82 74 80 33 48]\n",
-      " [40 74 82 27 96 46 94 32]]\n",
+      "[[94 94 48 75 69 55 83 72]\n",
+      " [12 58 78 15 22 90 74 24]]\n",
       "8x2\n",
-      "[[24 42]\n",
-      " [22 82]\n",
-      " [74 80]\n",
-      " [33 48]\n",
-      " [40 74]\n",
-      " [82 27]\n",
-      " [96 46]\n",
-      " [94 32]]\n"
+      "[[94 94]\n",
+      " [48 75]\n",
+      " [69 55]\n",
+      " [83 72]\n",
+      " [12 58]\n",
+      " [78 15]\n",
+      " [22 90]\n",
+      " [74 24]]\n"
      ]
     }
    ],
@@ -594,6 +594,89 @@
     "print(arr2.reshape(2,8))\n",
     "print('8x2')\n",
     "print(arr2.reshape(8,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[94 94 48 75]\n",
+      " [69 55 83 72]\n",
+      " [12 58 78 15]\n",
+      " [22 90 74 24]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[94 94 48 75]\n",
+      "94\n",
+      "[22 90 74 24]\n",
+      "[[94 94 48 75]\n",
+      " [69 55 83 72]\n",
+      " [12 58 78 15]]\n",
+      "[[69 55 83 72]\n",
+      " [12 58 78 15]\n",
+      " [22 90 74 24]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr2[0]) # 0th row\n",
+    "print(arr2[0,1]) #0th row first column\n",
+    "print(arr2[-1]) #last row\n",
+    "print(arr2[:3]) #0th to 2nd\n",
+    "print(arr2[1:]) #1st to last row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True, False,  True],\n",
+       "       [ True,  True,  True,  True],\n",
+       "       [False,  True,  True, False],\n",
+       "       [False,  True,  True, False]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2 > 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = arr2[arr2>50]\n",
+    "z = y.reshape(4,4)\n",
+    "print(z)"
    ]
   }
  ],
